[package]
name = "rabbit"
version = "0.1.0"
authors = ["Hector Peeters <hector.peeters@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
unicode-segmentation = "1.6.0"
clap = "2.33.3"
notify = "4.0.15"
wkhtmltopdf = { version = "0.3.0", optional = true }
syntect = "4.4.0"
base64 = "0.13.0"

[features]
default = []
pdf = ["wkhtmltopdf"]
